added seo keywords

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Currently focusing on building innovative API-driven React web applications. See my most recent projects here:"
+      content="Currently focusing on building innovative
+    API-driven React web applications. Recent Projects: React Habit Tracker.
+    Instagram Search Bar. Food Blog Website."
+    />
+    <meta
+      name="keywords"
+      content="nikzprojects, nikz, projects, nik, z, nikzprojects.com, React, javascript, web development"
     />
     <link
       rel="manifest"
