Added google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,20 @@
       href="%PUBLIC_URL%/static/reactportfolio/manifest.json"
     />
     <title>Nik Zagarella | JavaScript Web Developer</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-JQZPS42ZVX"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-JQZPS42ZVX");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
