React router added and fuctioning

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/static/reactportfolio/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton"></script>
+    <meta
+      name="google-signin-client_id"
+      content="193552029926-u74rfb1qh4pe5dnn8oqb15ku8hueojhm.apps.googleusercontent.com"
+    />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
