--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <div id="root"></div>
   </body>
 </html>
